# 015-seismic-fwi-engine

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example_forward_modeling.cpp  example_segy_read.cpp  example_velocity_model.cpp
include/fwi/: fwi_engine.h
include/fwi/common/: ibm_float.h  types.h  utils.h
include/fwi/cuda/: acoustic_2d_fd_cuda.h
include/fwi/geometry/: acquisition.h  receiver.h  shot.h
include/fwi/io/: vtk_writer.h
include/fwi/modeling/: acoustic_2d_fd.h  fwi_gradient.h  source.h  velocity_model.h  wavelet.h
include/fwi/segy/: ebcdic.h  segy_parser.h
python/: fwi_scheduler.py
src/: CMakeLists.txt  fwi_engine.cpp
src/common/: ibm_float.cpp  utils.cpp
src/cuda/: acoustic_2d_fd_cuda.cu
src/geometry/: acquisition.cpp  receiver.cpp  shot.cpp
src/io/: vtk_writer.cpp
src/modeling/: acoustic_2d_fd.cpp  fwi_gradient.cpp  source.cpp  velocity_model.cpp  wavelet.cpp
src/python/: bindings.cpp
src/segy/: ebcdic.cpp  segy_parser.cpp
tests/: CMakeLists.txt  test_acoustic_2d_fd.cpp  test_fwi_gradient.cpp  test_ibm_float.cpp  test_segy_parser.cpp  test_velocity_model.cpp  test_vtk_writer.cpp  test_wavelet.cpp
